--- a/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj
+++ b/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="BruteForce.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SimulatedAnnealing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryHeap.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="reading.h" />
+    <ClInclude Include="SimulatedAnnealing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
