--- a/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
+++ b/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Matrix.cpp">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
+    <ClCompile Include="SimulatedAnnealing.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -51,6 +54,9 @@
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="reading.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="SimulatedAnnealing.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
