--- a/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
+++ b/PEA1_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
@@ -56,7 +56,7 @@
     <ClInclude Include="SimulatedAnnealing.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="generateRandom.h">
+    <ClInclude Include="RandomGenerator.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
