--- a/PEA2_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj
+++ b/PEA2_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c083406f-d67f-45c5-b80e-ce2b6b93e9cd}</ProjectGuid>
     <RootNamespace>PEA1Niewczas</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Pea2_Niewczas</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -144,6 +145,7 @@
     <ClCompile Include="BruteForce.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Reader.cpp" />
     <ClCompile Include="SimulatedAnnealing.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -153,7 +155,7 @@
     <ClInclude Include="RandomGenerator.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="menu.h" />
-    <ClInclude Include="reading.h" />
+    <ClInclude Include="Reader.h" />
     <ClInclude Include="SimulatedAnnealing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
