--- a/PEA2_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
+++ b/PEA2_Niewczas/PEA1_Niewczas/PEA1_Niewczas.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="SimulatedAnnealing.cpp">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
+    <ClCompile Include="Reader.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -50,7 +53,7 @@
     <ClInclude Include="BinaryHeap.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="reading.h">
+    <ClInclude Include="Reader.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="SimulatedAnnealing.h">
